gitops/platform/headlamp/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: mkcert-ca-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: headlamp.hy-k8s.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 4466
  tls:
    - hosts:
        - headlamp.hy-k8s.home.arpa
      secretName: headlamp-tls # pragma: allowlist secret
